--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "groq-sdk": "^0.37.0",
     "sql.js": "^1.10.2"
